Add topic status open in new tag and fix radar topic <a> tag

--- a/教師版/index.html
+++ b/教師版/index.html
@@ -470,7 +470,7 @@
             <span class="green-text"
               ><%= data.chtclass %> <%= data.name %></span
             >
-            同學目前為止的作答結果，核心素養結果如下：
+            同學目前為止的作答結果，你的核心素養結果如下：
           </h3>
         </div>
         <h3 class="big-title">三大核心面向雷達圖</h3>
@@ -487,21 +487,15 @@
             <div class="card-body">
               <h3 class="card-title">A 自主行動</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="A"
+                <span data-is-answer="true" data-category="A">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["A"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="A"
+                <span data-is-answer="false" data-category="A">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["A"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -535,21 +529,15 @@
             <div class="card-body">
               <h3 class="card-title">B 溝通互動</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="B"
+                <span data-is-answer="true" data-category="B">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["B"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="B"
+                <span data-is-answer="false" data-category="B">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["B"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -583,21 +571,15 @@
             <div class="card-body">
               <h3 class="card-title">C 社會參與</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="C"
+                <span data-is-answer="true" data-category="C">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["C"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="C"
+                <span data-is-answer="false" data-category="C">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["C"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -640,21 +622,15 @@
             <div class="card-body">
               <h3 class="card-title">A1 身心素質與自我精進</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="A1"
+                <span data-is-answer="true" data-category="A1">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["A1"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="A1"
+                <span data-is-answer="false" data-category="A1">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["A1"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -692,21 +668,15 @@
             <div class="card-body">
               <h3 class="card-title">A2 系統思考與解決問題</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="A2"
+                <span data-is-answer="true" data-category="A2">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["A2"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="A2"
+                <span data-is-answer="false" data-category="A2">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["A2"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -744,21 +714,15 @@
             <div class="card-body">
               <h3 class="card-title">A3 規劃執行與創新應變</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="A3"
+                <span data-is-answer="true" data-category="A3">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["A3"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="A3"
+                <span data-is-answer="false" data-category="A3">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["A3"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -805,21 +769,15 @@
             <div class="card-body">
               <h3 class="card-title">B1 符號運用與溝通表達</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="B1"
+                <span data-is-answer="true" data-category="B1">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["B1"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="B1"
+                <span data-is-answer="false" data-category="B1">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["B1"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -857,21 +815,15 @@
             <div class="card-body">
               <h3 class="card-title">B2 科技資訊與媒體素養</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="B2"
+                <span data-is-answer="true" data-category="B2">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["B2"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="B2"
+                <span data-is-answer="false" data-category="B2">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["B2"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -909,21 +861,15 @@
             <div class="card-body">
               <h3 class="card-title">B3 藝術涵養與美感素養</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="B3"
+                <span data-is-answer="true" data-category="B3">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["B3"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="B3"
+                <span data-is-answer="false" data-category="B3">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["B3"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -971,21 +917,15 @@
             <div class="card-body">
               <h3 class="card-title">C1 道德實踐與公民意識</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="C1"
+                <span data-is-answer="true" data-category="C1">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["C1"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="C1"
+                <span data-is-answer="false" data-category="C1">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["C1"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -1023,21 +963,15 @@
             <div class="card-body">
               <h3 class="card-title">C2 人際關係與團隊合作</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="C2"
+                <span data-is-answer="true" data-category="C2">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["C2"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="C2"
+                <span data-is-answer="false" data-category="C2">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["C2"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -1075,21 +1009,15 @@
             <div class="card-body">
               <h3 class="card-title">C3 多元文化與國際理解</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="C3"
+                <span data-is-answer="true" data-category="C3">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["C3"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="C3"
+                <span data-is-answer="false" data-category="C3">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["C3"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -1138,21 +1066,15 @@
             <div class="card-body">
               <h3 class="card-title">發現問題</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="NA-A"
+                <span data-is-answer="true" data-category="NA-A">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["NA-A"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="NA-A"
+                <span data-is-answer="false" data-category="NA-A">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["NA-A"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -1190,21 +1112,15 @@
             <div class="card-body">
               <h3 class="card-title">規劃與研究</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="NA-B"
+                <span data-is-answer="true" data-category="NA-B">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["NA-B"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="NA-B"
+                <span data-is-answer="false" data-category="NA-B">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["NA-B"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -1242,21 +1158,15 @@
             <div class="card-body">
               <h3 class="card-title">論證與建模</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="NA-C"
+                <span data-is-answer="true" data-category="NA-C">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["NA-C"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="NA-C"
+                <span data-is-answer="false" data-category="NA-C">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["NA-C"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -1294,21 +1204,15 @@
             <div class="card-body">
               <h3 class="card-title">表達與分享</h3>
               <div class="card-info">
-                <span>
-                  已做答題數：<span
-                    class="green-text"
-                    data-is-answer="true"
-                    data-category="NA-D"
+                <span data-is-answer="true" data-category="NA-D">
+                  已做答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["NA-D"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
-                <span>
-                  未作答題數：<span
-                    class="green-text"
-                    data-is-answer="false"
-                    data-category="NA-D"
+                <span data-is-answer="false" data-category="NA-D">
+                  未作答題數：<span class="green-text"
                     ><%= data.scienceLiteracyData["NA-D"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
