Fix download modal filter lost element

--- a/合併版/indexTeacher.html
+++ b/合併版/indexTeacher.html
@@ -394,8 +394,16 @@
                 <label>題目名稱</label>
               </div>
               <div class="filterBox-checkBox-group">
+                <input type="checkbox" value="cht_class" />
+                <label>學生班級</label>
+              </div>
+              <div class="filterBox-checkBox-group">
+                <input type="checkbox" value="user_name" />
+                <label>學生姓名</label>
+              </div>
+              <div class="filterBox-checkBox-group">
                 <input type="checkbox" value="answer" />
-                <label>你的答案</label>
+                <label>學生答案</label>
               </div>
               <div class="filterBox-checkBox-group">
                 <input type="checkbox" value="iscorrect" />
